<resources>
    <string name="app_name">MobieStudy</string>
    <string name="cardGoingButton">пойду</string>
    <string name="cardImageDescription">Пример изображения</string>
    <string name="cardEventName">Художественный музей имени Сурикова</string>
    <string name="cardEventPlace">просп. Мира, д. 12</string>
    <string name="settingsButtonDescription">Кнопка настроек</string>
    <string name="homeTitle">События в Красноярске</string>
    <string name="favoritesTiltle">Мои события</string>
    <string name="eventDetailDescription">В экспозицию входят экспонаты из краеведческого музея, художественные работы из частных коллекций и из Госхранилища. Большой вклад в создание сокровищницы искусства внес П.И. Кузнецов, приятель и помощник В.И. Сурикова. Здесь вы найдете картины, эскизы известных художников России и другие ценные с художественной точки зрения экспонаты, разбитые на несколько временных групп: —​ искусство ХХ века отображено картинами Васнецова, Филатчева, Мыльникова, Герасимова и др. —​ современный поп-арт от Деева, Сергина, Мешкова, Лекаренко, Ряузова и др. В рамках музея реализуются и образовательные программы как группового, так и частного характера. Занятия проводятся в виде лекций, мастер-классов и простых уроков.</string>
    <string name="backButtonDescription">Кнопка взвращения на предыдущий экран</string>
    <string name="mapTitle">События на карте</string>
    <string name="mapImageDescription">Пример карты</string>
    <string name="mapMarkDescription">Метка события</string>
    <string name="eventName">Ваше событие</string>
    <string name="cityName">Ваш город</string>
    <string name="concreteCityName">Красноярск</string>
    <string name="concreteEventName">Выставки</string>

    <string name="baseImageURL">https://i.pinimg.com/564x/0c/bb/aa/0cbbaab0deff7f188a7762d9569bf1b3.jpg</string>

    <string-array name="cities">
        <item>Красноярск</item>
        <item>Москва</item>
        <item>Новосибирск</item>
    </string-array>

    <string-array name="events">
        <item>Выставки</item>
        <item>Образование</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>