<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/homeTitle"
                android:textSize="28sp" />

            <LinearLayout
                android:id="@+id/searchLayout"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <SearchView
                        android:id="@+id/searchView"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:src="@drawable/baseline_settings_24"
                        android:contentDescription="@string/settingsButtonDescription"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/firstCardView"
                android:layout_width="244dp"
                android:layout_height="339dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/example"
                        android:contentDescription="@string/cardImageDescription"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/cardEventName"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/cardEventPlace"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/cardGoingButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="end"
                        android:layout_margin="12dp"
                        android:backgroundTint="@color/colorPassive"
                        android:gravity="center"
                        android:text="@string/cardGoingButton"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/secondCardView"
                android:layout_width="244dp"
                android:layout_height="339dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/example"
                        android:contentDescription="@string/cardImageDescription"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/cardEventName"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/cardEventPlace"
                        android:textSize="13sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="end"
                        android:layout_margin="12dp"
                        android:backgroundTint="@color/colorPassive"
                        android:gravity="center"
                        android:text="@string/cardGoingButton"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>